# cdp_cluster_fastmcp_server_v7_enterprise_deployment

./: .env  .env.example  Dockerfile  IMPLEMENTATION_NOTES.md  README.md  pyproject.toml  requirements.txt  serve_http.py
agent_studio/: HTTP_TOOL_SETUP.md  http_tool_examples.json
cdp_cluster_mcp_server/: __init__.py  alerts.py  cluster_router.py  cm_client.py  config.py  memory_store.py  planner.py  policy.py  prometheus_scaffold.py  server.py  stdio_server.py  tools.py  watchdog.py
cml/: APP_SETUP.md
k8s/: deployment.yaml
scripts/: healthcheck.sh  start_cml.sh
